<resources>
    <string name="app_name">Remember English Example</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_card">Card</string>
    <string name="title_learner">Learner</string>
    <string name="title_settings">Settings</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="search_hint">Enter word here</string>
    <string name="show_fragment_error_string">error during attempt to show window</string>
    <string name="something_went_wrong">Oops, something went wrong!</string>

    <!--add dialog strigns-->
    <string name="add_dialog_title">Добавление перевода</string>
    <string name="original_word_field">Enter original word *</string>
    <string name="transcription_word_field">Enter transcription</string>
    <string name="translation_word_field">Enter translation *</string>
    <string name="example_word_field">Enter example</string>
    <string name="required_field">Required field</string>
</resources>
