<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24px"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_card"
        android:icon="@drawable/ic_card_black_24px"
        android:title="@string/title_card" />

    <item
        android:id="@+id/navigation_learner"
        android:icon="@drawable/ic_learn_black_24px"
        android:title="@string/title_learner" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24px"
        android:title="@string/title_settings" />

</menu>
